# seven-hrops

./: .env  .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts  vitest.route-eval.config.ts
.github/workflows/: build-release.yml  test.yml
article/: 01-agent-5-modules.md  LLM_FUNCTION_CALLING_COMPAT.md  agent-runtime-guide.md
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/platform/: bootstrap.ts.html  builtinSeed.ts.html  dynamicProviderTrust.ts.html  index.html  runtimeConfig.ts.html  runtimeFeatures.ts.html
doc/: MANUAL_COMMANDS.md  SPEC.md  task.md
doc/agent-architecture/: 00-总架构设计.md  01-简历筛选.md  02-JD优化.md  03-面试提纲.md  04-笔试准备.md  05-面试评价.md  06-访谈提纲.md  07-撰写报告.md  08-音乐电台.md  09-全局协调者.md  10-AgentBuilder.md  11-HSAS-Spec.md  12-平台内置工具集.md  13-沙箱实现细节.md  14-通用约定.md  15-平台底座实现指南.md  16-开发者快速上手.md  17-DB-Schema.md  18-测试策略.md  19-实施计划.md  20-多模型协议适配层.md  20-静默切换协议.md  21-provider-coverage-matrix.md  21-会话工作空间绑定设计.md
doc/employee-interview-generator/: README.md  RELEASE-v3.1.0.md  SKILL.md
platform/schemas/: agent.schema.json  capability.schema.json  skill.schema.json
scripts/: aisdk-mixed-version-smoke.ts  builtin-fastpath-bench.ts  check-aisdk-versions.ts  check-dynamic-provider-safety.ts  check-registry-routing.ts  fetch-pdfium.sh  gen-manifest-types.mjs  prompt-style-decorator-smoke.ts  sandbox-stress.ts
skills/claudio/: .env.example  .gitignore  README.md  TUTORIAL.md  package.json  start.sh
src/: App.tsx  agent-runtime-config.json  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: browser.rs  candidate_crud.rs  compliance_crud.rs  diagnostics.rs  export_crud.rs  file_dialog.rs  job_description_crud.rs  manifest_io.rs  message_commands.rs  mod.rs  project_crud.rs  resume_crud.rs  sandbox.rs  screening_crud.rs  session_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 001_initial_tables.sql  002_capabilities.sql  003_sessions_and_messages.sql
src-tauri/src/db/models/: candidate.rs  compliance_result.rs  event_log.rs  export_record.rs  job_description.rs  message.rs  mod.rs  project.rs  resume.rs  screening_result.rs  session.rs
src-tauri/src/db/repositories/: candidate_repo.rs  compliance_result_repo.rs  event_log_repo.rs  export_record_repo.rs  job_description_repo.rs  message_repo.rs  mod.rs  project_repo.rs  resume_repo.rs  screening_result_repo.rs  session_repo.rs
src-tauri/src/email/: commands.rs  imap_client.rs  keychain.rs  mod.rs  oauth.rs  smtp_client.rs
src-tauri/src/manifest/: agent.rs  capability.rs  mod.rs  skill.rs
src-tauri/src/native/: errors.rs  export.rs  fs.rs  fs_binary.rs  mod.rs  models.rs  network.rs  parse.rs  transcribe.rs  webserver.rs
src-tauri/src/sandbox/: audit.rs  errors.rs  fs_guard.rs  mod.rs  network_guard.rs
src-tauri/src/types/: manifest.generated.ts
src-tauri/tests/fixtures/: README.md
src/agent-runtime/: index.ts
src/components/: PlatformBootError.test.tsx  PlatformBootError.tsx
src/hooks/: .gitkeep
src/lib/: tauriBrowser.ts
src/pages/: WorkspacePage.tsx
src/platform/: bootstrap.ts  builtinSeed.test.ts  builtinSeed.ts  dynamicProviderTrust.ts  runtimeConfig.ts  runtimeFeatures.ts
src/services/: .gitkeep  agentBuilderService.ts  agentService.ts  capabilitySession.ts  contextBuilder.ts  db.ts  emailService.ts  metricsService.ts  migration.ts  orchestratorBridge.ts  sessionEventLogger.ts  skillSyncService.ts  workspaceManager.ts
src/stores/: .gitkeep  aiStore.ts  capabilityStore.ts  emailStore.ts  layoutStore.ts  messageStore.ts  musicStore.ts  permissionStore.ts  sessionStore.ts  silentSwitchStore.ts  taskStore.ts  workspaceStore.ts
src/test/: email.integration.test.tsx  email.unit.test.ts  setup.ts
src/tool-registry/: index.ts
src/types/: agentBuilder.ts  chat.ts  context.ts  email.ts  index.ts  manifest.generated.ts  metrics.ts  music.ts  orchestrator.ts  toolpack.ts  (+2 more)
(+282 files in other folders)
